--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"
-        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_below="@id/app_bar_layout" />
 
 
 </android.support.design.widget.CoordinatorLayout>
