--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,34 +10,34 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:text="@string/sign_in"
-        android:textColor="#fff" />
+        android:text="@string/sign_inn"
+        android:textColor="#fff"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible"
-        android:textSize="25sp"
-        android:layout_margin="16dp"
         android:layout_gravity="center"
-        android:layout_width="200dp" />
+        android:layout_margin="16dp"
+        android:textSize="25sp"
+        android:visibility="visible" />
 
     <TextView
-        android:text="Click to Sign in with Google"
-        android:layout_width="match_parent"
-        android:textSize="12sp"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content"
         android:id="@+id/textView3"
-        android:textStyle="normal|bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="40dp"
+        android:text="Click to Sign in with Google"
         android:textAlignment="center"
-        android:textColor="#fff" />
+        android:textColor="#fff"
+        android:textSize="12sp"
+        android:textStyle="normal|bold" />
 
 
 </FrameLayout>
