--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,45 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/colorPrimary"
+    android:fitsSystemWindows="true"
     tools:context="com.gdgenugu.diskus042.SplashScreenActivity">
 
 
     <!--will replace this text with gdgenugu logo in the future and change from textview to imageview
      and maybe still include the text based on opinion-->
     <TextView
-        android:text="@string/lead_txt"
+        android:id="@+id/tvintro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvintro"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textColor="@android:color/background_light"
+        android:layout_marginBottom="200dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        android:text="@string/lead_txt"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="200dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:text="@string/logo_text"
+        android:id="@+id/textViewHey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewHey"
-        android:textSize="30sp"
-        android:textColor="@android:color/white"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
+        android:text="@string/logo_text"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvintro"
-        android:layout_marginBottom="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <!-- This is button is dormant now, we might decide to remove the thread timer and use the
     buttun click to proceed to login-->
