--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,96 +14,94 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
     <android.support.constraint.Guideline
-        android:layout_width="411dp"
-        android:layout_height="wrap_content"
         android:id="@+id/guideline"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:layout_editor_absoluteY="597dp"
-        tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintGuide_percent="0.90555096" />
+        app:layout_constraintGuide_percent="0.83" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
         android:layout_width="0dp"
-        app:layout_constraintVertical_bias="0.86"
-        app:layout_constraintRight_toLeftOf="@+id/fab"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp">
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/fab"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        app:layout_constraintVertical_bias="0.86">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/textInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:id="@+id/textInputLayout"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginRight="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toRightOf="@+id/addMessageImageView"
+                android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
-                android:weightSum="1">
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:weightSum="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/addMessageImageView"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <EditText
                     android:id="@+id/input"
                     android:layout_width="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:hint="@string/message"
+                    android:layout_height="wrap_content"
 
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/messageRecyclerView"
-                    app:layout_constraintLeft_toRightOf="@+id/addMessageImageView"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="16dp"
-                    app:layout_constraintRight_toLeftOf="@+id/fab"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_height="match_parent"
-                    android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+                    android:layout_marginTop="8dp"
+                    android:inputType="textMultiLine"
+                    android:maxHeight="100dp"
                     android:scrollIndicators="right"
                     android:scrollbarAlwaysDrawVerticalTrack="true"
                     android:scrollbars="vertical"
-                    android:textColorLink="?attr/colorBackgroundFloating" />
+                    android:textColorLink="?attr/colorBackgroundFloating"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@+id/addMessageImageView"
+                    app:layout_constraintRight_toLeftOf="@+id/fab"
+                    app:layout_constraintTop_toBottomOf="@+id/messageRecyclerView" />
 
             </android.support.design.widget.TextInputLayout>
 
             <ImageView
                     android:id="@+id/addMessageImageView"
-                android:src="@drawable/ic_attachment_black_24dp"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="16dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription=""
+                android:src="@drawable/ic_attachment_black_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.25" />
         </android.support.constraint.ConstraintLayout>
 
@@ -112,30 +110,32 @@
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
             android:clickable="true"
             android:src="@drawable/ic_send_white_24dp"
-            android:tint="@android:color/white"
-            app:fabSize="auto"
-            android:layout_height="wrap_content"
-            app:backgroundTint="@color/colorPrimary"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
+        android:tint="@android:color/white"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="auto"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         app:layout_constraintVertical_bias="0.84000003" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
-        android:layout_width="784dp"
-        android:layout_height="1004dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="0dp"
+        android:layout_height="907dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="0dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.120000005" />
+        app:layout_constraintHorizontal_bias="0.606"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.997" />
 
 </android.support.constraint.ConstraintLayout>
