--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,10 @@
     <item
         android:id="@+id/invite_menu"
         android:title="@string/invite_menu_label"/>
+
+    <item
+        android:id="@+id/crash_menu"
+        android:title="@string/crash_menu_label" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
